--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,21 +1,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.management_church">
 
-    <!-- Internet permission for WebView -->
+    <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:label="SantiSync"
         android:icon="@mipmap/ic_launcher"
-        android:hardwareAccelerated="true"> <!-- Hardware acceleration is critical for WebView -->
+        android:hardwareAccelerated="true">
 
-        <!-- Add your Google Maps API key here -->
+        <!-- API Key for Google Maps -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCK2gEcEvji226n0EH6pfDyfnoVYEkyNHw"/>
-
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -35,6 +36,7 @@
             </intent-filter>
         </activity>
 
+        <!-- Flutter Embedding Version -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
