--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,17 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.4.2' // Add Google services classpath here
+    }
+}
+
+plugins {
+    id("com.google.gms.google-services") version "4.4.2"
+}
+
 allprojects {
     repositories {
         google()
