--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
-
 name: management_church
 description: "A Flutter project for church management and livestreaming."
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -11,22 +10,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.3
+  firebase_core: ^2.10.0
+  firebase_auth: ^4.20.0
+  firebase_database: ^10.1.7
+  http: ^1.2.0
   cupertino_icons: ^1.0.6
   google_maps_flutter: ^2.2.0
-  url_launcher: ^6.0.9
-  webview_flutter: ^4.0.0
-  webview_flutter_android: ^3.16.3
-  webview_flutter_wkwebview: ^3.14.0
+  url_launcher: ^6.1.7
+  webview_flutter: ^2.0.13
+  webview_flutter_android: ^2.0.13
+  webview_flutter_wkwebview: ^2.9.5
   table_calendar: ^3.0.9
   intl: ^0.18.0
-  shared_preferences: ^2.1.1
+  shared_preferences: ^2.0.13
   flutter_webrtc: ^0.9.28
-  flutter_ffmpeg: ^0.4.0
-  web_socket_channel: ^2.1.0
-  firebase_core: ^2.17.0
-  firebase_database: ^10.1.0
-  flutter_local_notifications: ^12.0.4
+  flutter_local_notifications: ^9.5.2
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
